--- a/examples/configs/pb2.yaml
+++ b/examples/configs/pb2.yaml
@@ -2,18 +2,37 @@ defaults:
   - _self_
   - /algorithm: dqn
   - /environment: cc_cartpole
-  - search_space: dqn
+  - search_space: dqn_no_cond
+  - override hydra/sweeper: HyperPB2
 
 hydra:
+  sweeper:
+    budget: ${eval:'${environment.n_total_timesteps} * ${pbt_iterations}'}
+    budget_variable: autorl.n_total_timesteps
+    loading_variable: load
+    saving_variable: save
+    sweeper_kwargs:
+      optimizer_kwargs:
+        population_size: 8
+        config_interval: 1e4
+        seed: ${autorl.seed}
+      checkpoint_tf: true
+      load_tf: true
+      checkpoint_path_typing: ""
+      maximize: true
+    search_space: ${search_space}
   run:
-    dir: results/${algorithm}_${environment.name}/${autorl.seed}
+    dir: results/pb2_${environment.name}/${autorl.seed}
   sweep:
-    dir: results/${algorithm}_${environment.name}/${autorl.seed}
+    dir: results/pb2_${environment.name}/${autorl.seed}
   job:
     chdir: true
 
 jax_enable_x64: false
 load_checkpoint: ""
+pbt_iterations: 10
+save: false
+load: false
 
 autorl:
   seed: 42
@@ -32,7 +51,7 @@ autorl:
   state_features: []
   objectives: ["reward_mean"]
   optimize_objectives: "upper"
-  n_steps: 1
+  n_steps: ${pbt_iterations}
   n_eval_steps: 100
   n_eval_episodes: 10
   
